--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "online-work-front",
+  "name": "blog-vue",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "element-ui": "^2.15.8",
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.4",
+    "vuex": "^2.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
